# dyno

./: .gitignore  Cargo.toml  DESIGN.md  README.md  test_with_docker_setup.sh
setups/github-actions-setup/workflows/: dyno.yml
src/: cli.rs  database.rs  error.rs  hyperfine.rs  main.rs  stats.rs  types.rs  utils.rs
test_data/: bench.json  bench_regression.json
test_data/migrations/: 01__init.sql
