[package]
edition = "2021"
name = "dyno"
version = "0.1.0"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.38"
clap = {version = "4.5.20", features = ["derive"]}
crossbeam-channel = "0.5"
md5 = "0.7.0"
openssl = {version = "0.10.68", features = ["vendored"]}
postgres-openssl = "0.5.0"
serde = {version = "1.0.210", features = ["derive", "rc"]}
serde_json = "1.0.132"
sysinfo = {version = "0.32.0", features = ["serde"]}
tokio = {version = "1.40.0", features = ["full"]}
tokio-postgres = "0.7.11"
walkdir = "2.5.0"
inferno = "0.11.21"
tabled = "0.16.0"
